--- a/alternaAI-extension/manifest.json
+++ b/alternaAI-extension/manifest.json
@@ -9,5 +9,11 @@
   },
   "action": {
     "default_popup": "popup.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["popup.js"]
+    }
+  ]
 }
