added sidebar, updated prompts, added refinement functionality

--- a/alternaAI-extension/manifest.json
+++ b/alternaAI-extension/manifest.json
@@ -3,11 +3,15 @@
   "name": "Alt Text Extractor",
   "version": "1.0",
   "description": "Lists all images on the current page and their alt text.",
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab", "scripting", "sidePanel", "storage"],
+  "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "popup.html"
+    "default_title": "Alt Text Extractor"
+  },
+  "side_panel": {
+    "default_path": "sidepanel.html"
   }
 }
